# MGHORPS

./: README.md  Ultimate_App.py  WebUI_User_Manual.md  build_gui.py  complete_vulkan_demo.py  demo_app.py  demo_pytorch_lingo_style.py  hw_detector.py  install.bat  lingo_compiler.py  lingo_ide.py  lp_reader.py  lp_solver_html.py  lp_solver_md.py  milp_solver.py  mps_reader.py  multi_gpu_accelerated_solver.py  npu_edge_scheduler.py  pdhg_accelerated_solver.py  sparse_revised_simplex.py  test_pseudocost.py  test_vulkan_acceleration.py  ultimate_lp_solver.py  ultimate_opt.py  ultimate_solvers_unified.py  vulkan_compute_accelerator.py  单纯形表可视化.html
UltimateSolver_SourceCode/: USER_MANUAL.md  cuda_installer.py  lingo_compiler.py  presolver.py  server.py  start_lingo_app.bat  test_enhanced_lingo.py  test_history.py  test_html.py  test_readers.py  test_script.py  test_sparse_solver.py  ultimate_lp_solver.py  ultimate_nlp_solver.py  ultimate_solvers_unified.py
UltimateSolver_SourceCode/qt_gui/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  cudainstallerdialog.cpp  cudainstallerdialog.h  hwacceldialog.cpp  hwacceldialog.h  main.cpp  mainwindow.cpp  mainwindow.h  newfiledialog.cpp  newfiledialog.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  solverdialog.cpp  solverdialog.h  syntaxhighlighter.cpp  syntaxhighlighter.h
UltimateSolver_SourceCode/static/: style.css
static/: app.js  index.html
